--- a/style.css
+++ b/style.css
@@ -51,8 +51,8 @@ body {
 }
 
 #info {
-  margin-top: 10vh;
-  padding: 40px;
+  margin-top: 100px;
+  padding: 20px 40px;
 }
 
 #info h2 {
@@ -60,16 +60,21 @@ body {
   font-weight: 400;
   width: 80%;
   line-height: 30px;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 #input {
   background-color: #2e4d59;
-  padding: 40px;
+  padding: 20px 40px;
   width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 form h3 {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  font-size: 1.3em;
+  font-weight: 400;
 }
 
 form ul {
@@ -82,8 +87,13 @@ form ul li {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  width: 40%;
-  font-size: 0.8em;
+  width: max(40%, 200px);
+  font-size: 0.7em;
+}
+
+input:focus {
+  outline: none;
+  border: 2px solid #7c97ae;
 }
 
 form button {
@@ -96,6 +106,12 @@ form button {
   color: #7c97ae;
   border-radius: 10px;
   background-color: #1d2b34;
+  transition: background-color 0.1s, color 0.1s;
+}
+
+form button:hover {
+  background-color: #7c97ae;
+  color: white;
 }
 
 #already-acc {
